...
            android:layout_marginTop="10dp"

            android:layout_marginRight="20dp"
            android:background="@color/white"
            android:hint="Address" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnraddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:text="Click to get the address"/>
    </com.google.android.material.textfield.TextInputLayout>
...
            android:background="@color/white"
            android:hint="Location Longitude" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnrequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Request"/>

</LinearLayout>
